...
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/thumbnailImg"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/step_thumbnail_desc"
            android:foregroundGravity="center"
...


    </RelativeLayout>


    <TextView
        android:id="@+id/step_desc_txtView"
        style="@style/StepDescTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
...
