<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_fragment_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.android.bakingapp.RecipeIngredientFragment">

    <TextView
        android:id="@+id/recipeIngredientsTxtView"
        style="@style/BakingAppRegularTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart" />
</android.support.v7.widget.CardView>
