<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_list"
    android:name="com.project.android.bakingapp.StepListFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_default"
    android:nestedScrollingEnabled="true"
    app:layoutManager="LinearLayoutManager"
    tools:context="com.project.android.bakingapp.StepListActivity"
    tools:listitem="@layout/step_list_content" />
